--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
           <a href="/editorials/steven_universe/gemder.html">1. Lets Talk GEM(der)</a>
           <a href="/editorials/steven_universe/fusion.html">2. Fusion is a Choice</a>
-          <a href=""></a>
+          <a href="/editorials/steven_universe/representation.html">3. Representation</a>
           <a href=""></a>
           <a href=""></a>
 
