--- a/index.html
+++ b/index.html
@@ -22,6 +22,25 @@
     </div>
     <div class="m-content-container">
       <div class="m-content">
+
+
+        <div class="m-title">
+          <h1>Food Stamps in America, How We're Leaving the Poor Hungry</h1>
+          <h2>by Shawna Sullivan</h2>
+        </div>
+
+        <p>Last year you may not have noticed that Congress made some incredibly damaging changes in the 2014 Farm Bill, unless of course you are part of the 19% of American households currently receiving food stamp benefits. For food stamps recipients in some states, benefits may have been slashed dramatically. </p>
+
+        <div class="m-links">
+
+          <a href="/editorials/public_policy/food_stamps.html">Breakdown: The 2014 Food Stamps Cuts</a>
+
+        </div>
+
+        <hr />
+
+
+
         <div class="m-title">
           <h1>Steven Universe is Teaching Feminism to our Children and it’s a Wonderful Thing</h1>
           <h2>by Shawna Sullivan</h2>
@@ -39,6 +58,7 @@
         </div>
 
         <hr />
+
 
       </div>
     </div>
