--- a/editorials/steven_universe/fusion.html
+++ b/editorials/steven_universe/fusion.html
@@ -16,6 +16,7 @@
 
   <body class="editorials editorials_steven_universe editorials_steven_universe_fusion">
     <div class="m-body">
+      <a class="m-back" href="http://shawnasullivan.com/"></a>
       <div class="fusion">
   <div class="m-article">
     <div class="m-lead">
