--- a/editorials/steven_universe/representation.html
+++ b/editorials/steven_universe/representation.html
@@ -16,6 +16,7 @@
 
   <body class="editorials editorials_steven_universe editorials_steven_universe_representation">
     <div class="m-body">
+      <a class="m-back" href="http://shawnasullivan.com/"></a>
       <div class="representation">
   <div class="m-article">
     <div class="m-lead">
