changed around the js a little

--- a/editorials/public_policy/food_stamps.html
+++ b/editorials/public_policy/food_stamps.html
@@ -11,6 +11,7 @@
     <title>Shawna Sullivan Writes Things</title>
     <meta name="description" content="">
 
+    <script src="/javascripts/head.js" type="text/javascript"></script>
     <link href="/stylesheets/style.css" rel="stylesheet" type="text/css" />
   </head>
 
@@ -55,6 +56,6 @@
   </div>
 </div>
     </div>
-    <script src="/javascripts/main.js" type="text/javascript"></script>
+    <script src="/javascripts/body.js" type="text/javascript"></script>
   </body>
 </html>
